[package]
name = "axum_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"]}
axum = {version = "0.6",features = ["macros"]}
tower-http = {version = "0.4",features = ["fs"]}
serde = {version = "1",features = ["derive"]}
serde_json = "1"
tower-cookies = "0.9"
anyhow = "1"
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = {version = "1",features = ["v4","fast-rng",]}


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
